# Test_task_A1-Dmitry_Shulga

./: README.md  pyproject.toml  requirements.txt
Test_1/: Test_task_1.py
Test_2/: Test_task_2.py
Test_3/pages/: base_page.py  home_page.py  phones_page.py
Test_3/tests/: test_phones_page.py
